# AShare-MCP

./: .gitignore  LICENSE  README.md  debug_baostock.py  pyproject.toml  test_indicators.py
ashare_mcp/: __init__.py  server.py
skills/: 01_market_analyst.md  02_sentiment_analyst.md  03_news_analyst.md  04_fundamentals_analyst.md  05_bull_researcher.md  06_bear_researcher.md  07_portfolio_manager.md
