[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-mcp"
version = "1.0.0"
description = "A股量化交易 MCP 服务器 - 基于 Baostock 数据源"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AShare-MCP Team"}
]
keywords = ["mcp", "stock", "quant", "A股", "量化交易", "baostock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "baostock>=0.8.8",
    "akshare>=1.12.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
]

[project.scripts]
ashare-mcp = "ashare_mcp.server:mcp_run"

[project.urls]
Homepage = "https://github.com/aitrados/ashare-mcp"
Documentation = "https://github.com/aitrados/ashare-mcp#readme"
Repository = "https://github.com/aitrados/ashare-mcp"
Issues = "https://github.com/aitrados/ashare-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ashare_mcp*"]
